# cpp-qr

./: CMakeLists.txt
include/: print.h  qr.h  qrcode.h  qrencode.h
src/: print.cpp  qrcode.cpp  qrencode.c  qrencode_inner.h  qrinput.c
